--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -5,20 +5,20 @@
    "id": "5defb0c3-9458-4314-8250-2538b960dcb7",
    "metadata": {},
    "source": [
-    "# Using age, cholestrol, maximum heart rate and resting blood pressure to classify heart disease patients from Cleveland #\n",
+    "# Using age, cholesterol, maximum heart rate and resting blood pressure to classify heart disease patients from Cleveland #\n",
     "\n",
-    "**John Mao, Caitlyn Chan and Ritaksha Roy Burman**\n",
+    "**John Mao, Caitlyn Chan, Ritaksha Roy Burman and Farida Fakhry Mohamed Ahmed Altahtawy**\n",
     "\n",
     "\n",
     "### Introduction ###\n",
     "Cardiovascular heart diseases are the leading cause of death worldwide, accounting for an estimated 17.9 million casualties each year according to the [WHO.](https://www.who.int/health-topics/cardiovascular-diseases#tab=tab_1)\n",
     "\n",
-    "Our project seeks to use age, cholesterol, maximum heart rate and resting blood pressure to diagnosis individuals with coronary artery disease, (CAD). CAD occurs when the arteries that deliver blood to the heart is reduced in diameter due to plaque buildup (CDC, 2021).\n",
+    "Our project seeks to use age, cholesterol, maximum heart rate and resting blood pressure to diagnose individuals with coronary artery disease, (CAD). CAD occurs when the arteries that deliver blood to the heart are reduced in diameter due to plaque buildup (CDC, 2021).\n",
     "\n",
-    "The goal of this project is to classify patients of whether they have CAD for preventatitive interventions.\n",
+    "The goal of this project is to classify patients of whether they have CAD for preventative interventions.\n",
     "\n",
     "The question we wish to answer is: \n",
-    "**How well can we predict a patient will have coronary artery disease based on age, cholestrol levels, resting blood pressure and maximum heart rate achieved?**\n",
+    "**How well can we predict a patient will have coronary artery disease based on age, cholesterol levels, resting blood pressure and maximum heart rate achieved?**\n",
     "\n",
     "To answer this, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database.\n",
     "\n",
@@ -38,13 +38,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50560554-f21b-4646-947b-d4e564a2b50c",
+   "cell_type": "markdown",
+   "id": "0a133924-aa10-49cd-8abb-a0f91a5c1111",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "FARIDA # add title for this table"
+    "Database description table:"
    ]
   },
   {
@@ -60,6 +58,14 @@
     "| num | N/A | 0 = unafflicted by disease, (1,2,3,4) showing presense of heart disease. |\n",
     "| thalach | N/A | maximum heart rate achieved (bpm) |\n",
     "| diagnosis | N/A | Diagnosis will be true or false relating to num |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa910e0c-8a90-4cde-bd5e-247a3313632b",
+   "metadata": {},
+   "source": [
+    "figure 1"
    ]
   },
   {
@@ -383,6 +389,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fc628af-2af5-450b-9cdf-dc3df64f7dda",
+   "metadata": {},
+   "source": [
+    "figure 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9caaa40-788e-4cdd-ae7c-95ba5d0d392f",
    "metadata": {},
    "source": [
@@ -456,6 +470,14 @@
     "                    summarize(count = n()) |>\n",
     "                    arrange(-count)\n",
     "heart_summary_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4ca9e6-bffc-4061-a2d6-a04f1d3843d6",
+   "metadata": {},
+   "source": [
+    "figure 3"
    ]
   },
   {
@@ -541,6 +563,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "667bf50e-7a19-4015-967c-5a3d70c62284",
+   "metadata": {},
+   "source": [
+    "figure 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c87b12e1-c823-4ff8-b231-428cf71d0327",
@@ -560,6 +590,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ea3fbfd-2079-42a8-9ba8-f16efbc50b2e",
+   "metadata": {},
+   "source": [
+    "figure 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be30506d-a630-4a85-a1f2-183d195c8905",
    "metadata": {},
    "source": [
@@ -572,6 +610,14 @@
    "metadata": {},
    "source": [
     "heart plot 3 RITZ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c50b4abe-3c00-483c-8479-e2b37f827247",
+   "metadata": {},
+   "source": [
+    "figure 6"
    ]
   },
   {
@@ -701,14 +747,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8864626-5ee7-49e5-9fc7-a55a124b12a5",
+   "metadata": {},
+   "source": [
+    "figure 7"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "999d0174-fbd2-4f37-b2de-6e278ab874cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: viz explanation\n        ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: viz explanation\n        ^\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "viz explanation \n",
-    "FARIDA "
+    "RITZ "
    ]
   },
   {
@@ -1344,6 +1407,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19a23762-5383-49ce-9cc1-1efa1e723a9b",
+   "metadata": {},
+   "source": [
+    "figure 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31ef4d53-dee1-4167-a6ac-3e73ffd38b8a",
    "metadata": {},
    "source": [
@@ -1452,6 +1523,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d372787-c90d-48e9-981f-5838f503dcda",
+   "metadata": {},
+   "source": [
+    "figure 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b06c171b-a770-4dab-90d3-6e0eaed36ee2",
    "metadata": {},
    "source": [
@@ -1521,6 +1600,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cbf94120-d1c3-4544-9215-a7a6999fcf05",
+   "metadata": {},
+   "source": [
+    "figure 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a286902-92b4-4e25-8817-4c299e2f4767",
    "metadata": {},
    "source": [
@@ -1566,6 +1653,8 @@
     "| Accuracy  |  74.03 |\n",
     "| Precision |  56.76 |\n",
     "| Recall    |  84 |\n",
+    "\n",
+    "figure 11\n",
     "\n",
     "From the confusion matrix, we observe a noticeable difference between the precision and recall. In the context of our heart disease diagnosis, prioritizing a higher recall makes sense as we want to minimize the risk of missing true positive cases. Even though our approach may include more false positive, further testing can ensure that afflicted patients receive the necessary care."
    ]
@@ -1631,6 +1720,14 @@
     "scale_color_manual(values = c(\"darkorange\", \"steelblue\")) +\n",
     "theme(text = element_text(size = 12))\n",
     "wkflw_plot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b5106d-c99a-4528-8fd8-8710e5751bbd",
+   "metadata": {},
+   "source": [
+    "figure 12"
    ]
   },
   {
@@ -3623,35 +3720,30 @@
    "id": "ce535197-90cb-4f35-8b51-47f218b394b4",
    "metadata": {},
    "source": [
-    "FARIDA \n",
+    "## Discussion\n",
     "\n",
-    "discussion section to address\n",
-    "- answering/how we answered the question (predictor/class variables) \n",
-    "- expected findings compared to outcome and plausible reasoning for this (faridas notes) and relate to classifiers 68% accuracy... and if the classifier is good for cleaveland as it is for switzerland \n",
-    "- impact of findings\n",
-    "- future questions \n",
+    "**Answering the predictive question:**\n",
+    "We are using our predictive model to answer the question of “How well can we predict a patient will have coronary artery disease based on age, cholesterol levels, resting blood pressure and maximum heart rate achieved?” This was answered by developing a classifier that diagnosed coronary artery disease using age, cholesterol levels, resting blood pressure and maximum heart rate achieved, which was able to predict diagnoses with relatively high accuracy.\n",
     "\n",
     "\n",
-    "    1. summarize what we found\n",
-    "    2. significance \n",
-    "    3. discuss whether this is what we expected\n",
-    "    4. dicuss impact\n",
-    "       "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "013fb8cf-458a-4a07-bbc7-a20d55095216",
-   "metadata": {},
-   "source": [
-    " heading here \n",
-    "Future questions this could lead to: \n",
-    "1. Which of the factors have the greatest influence on diagnosis of CAD?\n",
-    "2. What are some preventative measures one can take to minimize risk of heart disease?\n",
+    "**Expected findings and outcome:**\n",
+    "As stated in our proposal, we expected to see a positive trend with resting blood pressure and age. This is due to the fact that ageing causes structural changes in the arteries like increased stiffness (arteriosclerosis), which contributes to the rise in blood pressure with age (National Institute on aging, 2022). We expected that those with cardiovascular diseases tend to have higher blood pressures, and according to Fuchs & Whelton (2019), high blood pressure is a predominant risk factor for heart diseases such as heart failure, coronary artery disease and more. \n",
+    "\n",
+    "The visualizations showed that patients diagnosed with heart disease by the classifier exhibited high levels of cholesterol and maximum heart rates. This is consistent with the fact that maximal (exercise-induced) heart rate emerges as a strong, long-term predictor of cardiovascular mortality and a significant risk factor for coronary artery disease, even after accounting for age, physical fitness, and conventional coronary risk factors in middle-aged men (Sandvik et al., 1995).\n",
+    "\n",
+    "We also expected our classification model to have high accuracy, especially considering the significance and potential implications of this in a medical context. The clustering of data points for each diagnosis seen in visualizations between the predictors and target variables suggested a relatively strong correlation with the target variable, which indicated high accuracy. This was then confirmed using the confusion matrix which indicated our model had an accuracy of 74%, with a higher recall of 84% compared to a precision of around 57%, which is important as this means a decreased risk of missing a true positive. This has significant implications as it ensures a high accuracy in diagnosing patients, especially those afflicted with coronary artery disease allowing them to receive the necessary medical treatment. However, the results also presented cases of false positives and false negatives which could have extreme ramifications in a medical setting, as this would mean those afflicted with the disease won’t get the care they need while those not afflicted will receive unnecessary treatment that could potentially harm their health (Burt et al., 2017). Despite this, there were more cases with a correct diagnosis than those with a negative diagnosis, which suggests that the model is relatively accurate and by training the classifier on larger datasets (increased sample size) the accuracy can be enhanced. \n",
     "\n",
     "\n",
+    "Considering the observed variability when comparing the confusion matrix results between Cleveland and Switzerland, the practical implementation of this predictive classification model would require developing additional classifiers tailored to specific geographic regions or demographic groups served by the hospital. This is because variations in cholesterol and blood pressure levels, which are key predictors of cardiovascular disease, are influenced by factors such as race, ethnicity, gender, changes in geographic location, modifications in lifestyle choices, and shifts in social policies and cultural practices (Bhatnagar, 2017). Changes in populations' cholesterol levels and blood pressure over the years across different regions also highlight the importance of regularly updating predictive classification models used for risk assessment and disease management to ensure accurate predictions. These strategies are intended to enhance accuracy and ensure the model's relevance to current local data sets.\n",
     "\n",
-    "\n"
+    "\n",
+    "**Impact of such findings:**\n",
+    "The impact of these results affects two key areas, clinical implications and public health policies.\n",
+    "Identifying correlations between risk factors and heart disease can aid in early detection, risk assessment and treatment planning for patients. The predictive model streamlines and enhances diagnostic accuracy which allows for patients with true positives to be prioritized, and healthcare providers can also use this information to develop personalized preventative strategies. However, given that this model’s accuracy is high but not perfect, it best serves as a preliminary diagnostic tool before seeking confirmation from healthcare professionals to mitigate the risk of fatal misdiagnosis.\n",
+    "Moreover, insights from such findings can inform public health policies aimed at reducing the presence of heart disease, where targeted interventions, screening programs and lifestyle modifications can be implemented based on the identified risk factors.\n",
+    "\n",
+    "**Future questions could this lead to:**\n",
+    "These findings lead to several future questions and avenues for research in the field of cardiovascular diseases. It prompts inquiry into which factors exert the greatest influence on the diagnosis of coronary artery disease. Looking at the possible preventative measures individuals can undertake to minimize the risk of heart disease is also essential for public health initiatives. Investigating relationships between heart diseases and other risk factors can allow for a more nuanced understanding of the disease and its progression. Moreover, analyzing how age and sex impact heart disease could shed light on health disparities and inequities in healthcare access, disease prevalence, and treatment outcomes across demographic groups. Finally, looking at whether there is potential for developing data-driven predictive models to forecast future cardiovascular events based on age, cholesterol levels, and blood pressure.\n"
    ]
   },
   {
@@ -3669,7 +3761,16 @@
     "Janosi, A ., Steinbrunn, W., Pfisterer, M., and Detrano, R. (1988). Heart Disease. UCI Machine Learning Repository. https://doi.org/10.24432/C52P4X.\n",
     "\n",
     "World Health Organization. (n.d.). https://www.who.int/health-topics/cardiovascular-diseases#tab=tab_1. \n",
-    "\n"
+    "\n",
+    "National institute on aging. (2022, October 1). High Blood Pressure and Older Adults. National Institute on Aging. https://www.nia.nih.gov/health/high-blood-pressure/high-blood-pressure-and-older-adults#:~:text=High%20blood%20pressure%2C%20or%20hypertension\n",
+    "\n",
+    "Fuchs, F. D., & Whelton, P. K. (2019). High Blood Pressure and Cardiovascular Disease. Hypertension, 75(2), 285–292. https://doi.org/10.1161/HYPERTENSIONAHA.119.14240\n",
+    "\n",
+    "Burt, T., Button, K., Thom, H., Noveck, R., & Munafò, M. (2017). The Burden of the “False‐Negatives” in Clinical Development: Analyses of Current and Alternative Scenarios and Corrective Measures. Clinical and Translational Science, 10(6), 470–479. https://doi.org/10.1111/cts.12478\n",
+    "\n",
+    "Sandvik, L., Erikssen, J., Ellestad, M., Erikssen, G., Thaulow, E., Mundal, R., & Rodahl, K. (1995). Heart rate increase and maximal heart rate during exercise as predictors of cardiovascular mortality. Coronary Artery Disease, 6(8), 667–680. https://doi.org/10.1097/00019501-199508000-00012\n",
+    "\n",
+    "Bhatnagar, A. (2017). Environmental Determinants of Cardiovascular Disease. Circulation Research, 121(2), 162–180. https://doi.org/10.1161/circresaha.117.306458"
    ]
   },
   {
